syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy";
option java_outer_classname = "KeyManagerServiceOuterClass";

package br.com.zupacademy;

import "google/protobuf/timestamp.proto";



service KeyManagerRegisterService {
  rpc register (PixKeyRegistrationRequest) returns (PixKeyRegistrationResponse) {}
}

service KeyManagerDeleteService {
  rpc delete (PixKeyDeleteRequest) returns (PixKeyDeleteResponse){}
}

service KeyManagerFindService {
  rpc findKey (FindPixKeyRequest) returns (FindPixKeyResponse) {}
}

service KeyManagerListService {
  rpc listKeys (ListPixKeyRequest) returns (ListPixKeyResponse) {}
}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

enum KeyTypeRequest {
  UNKNOWN_KEY = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

//Register
message  PixKeyRegistrationRequest {
  string clientId = 1;
  KeyTypeRequest keyType = 2;
  string keyValue = 3;
  AccountType account = 4;
}
message PixKeyRegistrationResponse {
  string pixId = 1;
  string clientId = 2;
}

//delete
message PixKeyDeleteRequest {
  string pixId = 1;
  string clientId = 2;
}

message PixKeyDeleteResponse {
  string response = 1;
}

//find
message FindPixKeyRequest {
  message FilterByPixId{
    string pixId = 1;
    string clientId = 2;
  }

  oneof filter {
    FilterByPixId pixId = 1;
    string key = 2;
  }

}
message FindPixKeyResponse {
  string pixId = 1;
  string clientId = 2;
  KeyTypeRequest typeKey = 3;
  string keyValue = 4;
  string name = 5;
  string cpf = 6 ;
  AccountResponse account = 7;
  google.protobuf.Timestamp createdIn = 8;

}

message AccountResponse {
  string nameInstitution = 1;
  string agency = 2;
  string number = 3;
  AccountType type = 4;
}

//list
message ListPixKeyRequest {
  string clientId = 1;
}

message ListPixKeyResponse {

  message ListPixKeyDetails{
    string pixId = 1;
    string clientId = 2;
    KeyTypeRequest keyType = 3;
    string KeyValue = 4;
    AccountType type = 5;
    google.protobuf.Timestamp createdIn = 6;
  }

  repeated ListPixKeyDetails listPixKey = 1;
}
